Fix buttons spacing

--- a/google.css
+++ b/google.css
@@ -58,6 +58,7 @@ p{
 }
 .buttons {
   margin-bottom:10px;
+  margin: 5px;
 }
 button {
   background-color:#f2f2f2;
@@ -81,4 +82,9 @@ input[type="text"]
 {
 
     font-size:24px;
+}
+.divider{
+  width:5px;
+  height:auto;
+  display:inline-block;
 }
